# particles

./: .gitignore  CMakeLists.txt  KdTree.cpp  KdTree.h  Options.cpp  Options.h  Utils.h  World.cpp  World.h  accordion.cpp  main.cpp
cmd/headless/: main.cpp
cmd/interactive/: main.cpp
cmd/obj_play/: main.cpp
examples/: accordion.sh  bunny.sh
gui/: CMakeLists.txt  FrameSaver.cpp  FrameSaver.h  GlWidget.cpp  GlWidget.h  MainWindow.cpp  MainWindow.ui  MeshSet.cpp  MeshSet.h  ObjGlWidget.cpp  ObjGlWidget.h  ObjLoadThread.h  ObjMainWindow.cpp  ObjMainWindow.h  ObjMainWindow.ui  ObjPlay.cpp  SimGlWidget.cpp  SimGlWidget.h  SimMain.cpp  SimMainWindow.cpp  SimMainWindow.h  SimMainWindow.ui  SimThread.cpp  main.cpp
lib/geom/: BBox.cpp  BBox.h  Collection.h  KdTree.cpp  KdTree.h  Mesh.cpp  Mesh.h  Neighbor.cpp  Neighbor.h  Neighborhood.cpp  Neighborhood.h  Octree.cpp  Octree.h  Triangle.cpp  Triangle.h  VectorList.cpp  VectorList.h
lib/gui/: GlWidget.cpp
lib/gui/live_sim/: SimGlWidget.cpp  SimGlWidget.h  SimMainWindow.cpp  SimMainWindow.h  SimMainWindow.ui
lib/gui/playback/: ObjGlWidget.h  ObjLoadThread.cpp  ObjMainWindow.h  ObjMainWindow.ui
lib/physics/: Material.h  Obstacle.cpp  Obstacle.h  PlaneObstacle.cpp  PlaneObstacle.h  SoftBody.cpp  SoftBody.h  kernels.h
lib/simulator/: FrameSaver.cpp  FrameSaver.h  Options.cpp  Options.h  SimThread.cpp  SimThread.h  World.cpp  World.h
meshes/: fixObj.py
samples/: angryBird.txt  angryBird30.30.30.txt  bar.txt  birdAndPigHiRes.txt  bunny-less.txt  bunny-small.txt  bunny.txt  bunny50.50.50.txt  bunnySuperLowRes.txt  cubby.txt  cube-729.txt  cube-8000.txt  cube.txt  cube50cm.txt  gumby.40.130.70.txt  long_bar_res.txt  pig.txt  pig30.30.30.txt  raisedGumby.30.110.60.txt  raisedGumby40.130.70.txt  raisedMasticatedBar100.10.10.txt  raisedMasticatedBar120.12.12.txt  raisedMasticatedBar150.15.15.txt  raisedMasticatedBar200.15.15.txt  scaleInput.py  sculpture.mesh.txt  sphere-fine.txt  sphere_90.txt  sphere_ash.txt  star.38.38.18.txt  star.txt  star2.txt  star_scaled.txt  test.txt  test2.txt  tetra.txt  thin-sheet-xy.txt  thin-sheet-xz.txt  thin-sheet-yz.txt  tower-43904.txt  (+9 more)
